# Django-SH

./: .gitignore  README.rst  setup.cfg
sh/management/commands/: sh.py
